@@ -489,6 +489,8 @@ Some default configuration options have changed:
 * (bug 2700) Nice things like link completion and signatures now work in <gallery> tags.
 * Cancel output buffering in StreamFile; when used inside gzip buffering this
   could cause funny timeout behavior as the Content-Length was wrong.
+* Return correct content-type header with 304 responses for StreamFile;
+  it confuses Safari if you let it return "text/html".
 
 
 == Compatibility ==
